--- a/hyperparameters.yml
+++ b/hyperparameters.yml
@@ -2,12 +2,15 @@ pokemon_battle:
   env_id: pokemon_battle_env
   replay_memory_size: 100000
   mini_batch_size: 32
-  epsilon_init: 0.65
+  epsilon_init: 0.5
   epsilon_decay: 0.999995
-  epsilon_min: 0.05
+  epsilon_min: 0.01
   network_sync_rate: 8000
   learning_rate_a: 0.0001
   discount_factor_g: 0.99
   stop_on_reward: 100000
   train_freq: 4
+  repeat_epsilon: False
+  randomize_enemy: False
   enable_double_dqn: True
+  enable_dueling_dqn: True
