--- a/hyperparameters.yml
+++ b/hyperparameters.yml
@@ -2,15 +2,17 @@ pokemon_battle:
   env_id: pokemon_battle_env
   replay_memory_size: 100000
   mini_batch_size: 32
-  epsilon_init: 0.5
-  epsilon_decay: 0.999995
-  epsilon_min: 0.01
   network_sync_rate: 8000
   learning_rate_a: 0.0001
   discount_factor_g: 0.99
-  stop_on_reward: 100000
   train_freq: 4
-  repeat_epsilon: False
+  steps: 10000000
+  epsilon_init: 1
+  epsilon_fraction: 0.2
+  epsilon_min: 0.01
   randomize_enemy: False
-  enable_double_dqn: True
-  enable_dueling_dqn: True
+  log_freq: 50000
+  should_log: True
+  plot_freq: 5000
+  should_plot: True
+  continue_training: True
