--- a/hyperparameters.yml
+++ b/hyperparameters.yml
@@ -1,6 +1,9 @@
 pokemon_battle:
   env_id: pokemon_battle_env
   replay_memory_size: 100000
+  replay_offset: 0.01
+  replay_alpha: 0.1
+  replay_beta: 0.1
   mini_batch_size: 32
   network_sync_rate: 2500
   learning_rate_a: 0.0001
@@ -15,4 +18,4 @@ pokemon_battle:
   should_log: True
   plot_freq: 5000
   should_plot: True
-  continue_training: True
+  continue_training: False
