--- a/hyperparameters.yml
+++ b/hyperparameters.yml
@@ -1,16 +1,17 @@
 pokemon_battle:
   env_id: pokemon_battle_env
-  n_step: 3
-  replay_memory_size: 2000000
+  n_step: 1
+  replay_memory_size: 3000000
   mini_batch_size: 32
   network_sync_rate: 50
   learning_rate_a: 0.0001
   discount_factor_g: 0.85
   train_freq: 4
-  steps: 2000000
+  steps: 10000000
   epsilon_init: 1
   epsilon_fraction: 0.2
   epsilon_min: 0.01
   randomize_enemy: False
   log_freq: 20000
+  plot_freq: 40000
   continue_training: True
